@@ -28,114 +28,4 @@ order.
     "Experiment ID:	3",,,,,,,,,,,,0.92
     ....
 * Add calculated fields.
-* We've run into a requirement to be able to access the original row of a
-  csv file, before it's been parsed. This allows us to give back to the
-  user their original data rows, for any rows that we're unable to process
-  properly.
-
-  Our implementation (see below) requires re-writing #shift, which feels
-  _very_ fragile since that's the primary read method.
-
-  Can you suggest an alternative approach? Or consider providing this type
-  of functionality as part of FasterCSV?
-
-  Thanks,
-  Michael
-
-
-
-  # Added original_row accessor to FasterCSV::Row to hold content
-  # if use_headers header and converters are set.
-  #
-  # Need to be able to return the old values back to the user in an error file.
-  #
-  class FasterCSV
-
-    class Row
-      # An array of data before converts change the data
-      attr_accessor :original_row
-    end
-
-    #
-    # The primary read method for wrapped Strings and IOs, a single row is pulled
-    # from the data source, parsed and returned as an Array of fields (if header
-    # rows are not used) or a FasterCSV::Row (when header rows are used).
-    #
-    # The data source must be open for reading.
-    #
-    def shift
-      # begin with a blank line, so we can always add to it
-      line = ""
-
-      # 
-      # it can take multiple calls to <tt>@io.gets()</tt> to get a full line,
-      # because of \r and/or \n characters embedded in quoted fields
-      # 
-      loop do
-        # add another read to the line
-        line  += @io.gets(@row_sep) rescue return nil
-        # copy the line so we can chop it up in parsing
-        parse = line.dup
-        parse.sub!(@parsers[:line_end], "")
-
-        # 
-        # I believe a blank line should be an <tt>Array.new</tt>, not 
-        # CSV's <tt>[nil]</tt>
-        # 
-        return Array.new if parse.empty?
-
-        # 
-        # shave leading empty fields if needed, because the main parser chokes 
-        # on these
-        # 
-        csv = if parse.sub!(@parsers[:leading_fields], "")
-          [nil] * $&.length
-        else
-          Array.new
-        end
-        # 
-        # then parse the main fields with a hyper-tuned Regexp from 
-        # Mastering Regular Expressions, Second Edition
-        # 
-        parse.gsub!(@parsers[:csv_row]) do
-          csv << if $1.nil?     # we found an unquoted field
-            if $2.empty?        # switch empty unquoted fields to +nil+...
-              nil               # for CSV compatibility
-            else
-              # I decided to take a strict approach to CSV parsing...
-              if $2.count("\r\n").zero?  # verify correctness of field...
-                $2
-              else
-                # or throw an Exception
-                raise MalformedCSVError, 'Unquoted fields do not allow \r or \n.'
-              end
-            end
-          else                  # we found a quoted field...
-            $1.gsub('""', '"')  # unescape contents
-          end
-          ""  # gsub!'s replacement, clear the field
-        end
-
-        # if parse is empty?(), we found all the fields on the line...
-        if parse.empty?
-          # ADDED: save csv values before converts change them.
-          current_row = csv.dup if @use_headers
-
-          # convert fields if needed...
-          csv = convert_fields(csv) unless header_row? or @converters.empty?
-          # parse out header rows and handle FasterCSV::Row conversions...
-          csv = parse_headers(csv) if @use_headers
-
-          # ADDED: assign original_row
-          csv.original_row = current_row if @use_headers and !@converters.empty?
-
-          # return the results
-          break csv
-        end
-        # if we're not empty?() but at eof?(), a quoted field wasn't closed...
-        raise MalformedCSVError, "Unclosed quoted field." if @io.eof?
-        # otherwise, we need to loop and pull some more data to complete the row
-      end
-    end
-  end
 * Examples, examples, examples...
